--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
 	"description": "Imagemin plugin for Gifsicle",
 	"license": "MIT",
 	"repository": "imagemin/imagemin-gifsicle",
-	"type": "module",
-	"exports": "./index.js",
 	"funding": "https://github.com/imagemin/imagemin-gifsicle?sponsor=1",
 	"engines": {
 		"node": "^12.20.0 || ^14.13.1 || >=16.0.0 || >=18.0.0 || >=20.0.0 || >=22.0.0"
@@ -28,9 +26,9 @@
 		"optimize"
 	],
 	"dependencies": {
-		"execa": "^6.0.0",
-		"gifsicle": "https://github.com/PruvoNet/gifsicle-bin#esm",
-		"is-gif": "^4.0.1"
+		"exec-buffer": "^3.0.0",
+		"gifsicle": "https://github.com/PruvoNet/gifsicle-bin#cjs",
+		"is-gif": "^3.0.0"
 	},
 	"devDependencies": {
 		"ava": "^3.15.0",
